--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/starlight": "^0.21.5",
     "astro": "^4.3.5",
+    "cobe": "^0.6.3",
     "sharp": "^0.32.5",
     "@astrojs/check": "^0.5.10",
     "typescript": "^5.4.5"
